Fix for Java 17 deprecated features